# ros_google_test_example

./: .gitignore  LICENSE  README.md
google_test_example/: CMakeLists.txt  package.xml
google_test_example/include/: main.hpp  message_provider.h  message_provider.hpp  non_virtual_talker.hpp  non_virtual_talker_main.h  non_virtual_talker_main.hpp  talker.hpp  virtual_publisher.hpp  virtual_talker.hpp  virtual_talker_main.h  virtual_talker_main.hpp
google_test_example/src/: main.cpp  message_provider.cpp  non_virtual_talker.cpp  non_virtual_talker_main.cpp  talker.cpp  virtual_publisher.cpp  virtual_talker.cpp  virtual_talker_main.cpp
google_test_example/test/: talker_test.cpp  test.cpp  test_non_virtual_talker.cpp  test_virtual_talker.cpp
gtest_gmock_example/: CMakeLists.txt  package.xml
gtest_gmock_example/include/gtest_gmock_example/: message_provider.h  non_virtual_talker.h  virtual_publisher.h  virtual_talker.h
gtest_gmock_example/src/: message_provider.cpp  non_virtual_talker.cpp  non_virtual_talker_main.cpp  virtual_publisher.cpp  virtual_talker.cpp  virtual_talker_main.cpp
gtest_gmock_example/test/: test_non_virtual_talker.cpp  test_virtual_talker.cpp
