<?xml version="1.0"?>
<package format="2">
  <name>gtest_gmock_example</name>
  <version>0.0.0</version>
  <description>Example to showcase the usage of gtest and gmock with ROS</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <!--nothing to export -->
  </export>

</package>
